# CostimScreen

./: LICENSE  README.md  pyproject.toml  run_model_comparison.py
data/: 20240522 - costim pool sorted cells.xlsx  candidate_metadata.xlsx  costim_normalized_elms_groupings.xlsx  costim_topol_protein_families.xlsx  merged_counts.xlsx  sample_metadata.xlsx
data/unused/: 20240123 - Costim large panel.xlsx  20240124 - Costim large panel.xlsx
docs/: api.rst  conf.py  index.rst  installation.rst  quickstart.rst
notebooks/: 00_fastq_to_counts.ipynb  01_refit_joint_model.ipynb  02_dirichlet_multinomial_analysis.ipynb  03_mann_whitney_analysis.ipynb
results/: alpha.csv  elm_feature_name_map.csv  glm_summary.txt  table_CM_vs_Naive_pooledPD1.csv  table_EM_vs_CM_pooledPD1.csv  table_EM_vs_Naive_pooledPD1.csv  table_PD1High_vs_PD1Low_pooledTsubset.csv  volcano_table_EM_High_vs_CM_High.csv  volcano_table_EM_High_vs_EM_Low.csv
results/dm_analysis/: ANALYSIS_SUMMARY.md  OPTIMIZATION_SUMMARY.md  dm_all_effects.csv  dm_model_params.csv  heatmap_pooled.csv  heatmap_z_scores.csv  simulation_results_detailed.csv  simulation_results_summary.csv  summary_table.txt  table_EM_vs_CM_pooledPD1.csv  table_Naive_vs_CM_pooledPD1.csv  table_Naive_vs_EM_pooledPD1.csv  table_PD1Low_vs_PD1High_pooledTsubset.csv  volcano_table_EM_High_vs_CM_High.csv  volcano_table_EM_High_vs_EM_Low.csv
results/gpcr/: summary_of_methods.xlsx
results/gpcr/dm_analysis/: dm_contrasts.csv  dm_phenotype_results.csv  heatmap_pooled_effects.csv  heatmap_pooled_pips.csv
results/gpcr/joint_nbglm_analysis/: heatmap_pooled_zscores.csv  nbglm_contrasts.csv
results/gpcr/mw_analysis/: heatmap_pooled_zscores.csv  mw_all_results.csv  mw_pd1_contrast.csv  mw_pooled_tsubset.csv  mw_tsubset_contrasts.csv
results/gpcr/phenotype_nbglm_analysis/: heatmap_pooled_coefs.csv  nbglm_contrasts.csv  nbglm_tsubset_coefs.csv
results/gpcr_1/: summary_of_methods.xlsx
results/gpcr_1/dm_analysis/: dm_contrasts.csv  dm_phenotype_results.csv  heatmap_pooled_effects.csv  heatmap_pooled_pips.csv
results/gpcr_1/joint_nbglm_analysis/: heatmap_pooled_zscores.csv  nbglm_contrasts.csv
results/gpcr_2/: summary_of_methods.xlsx
results/gpcr_3/: summary_of_methods.xlsx
results/gpcr_3_4/: summary_of_methods.xlsx
results/gpcr_4/: summary_of_methods.xlsx
results/model_comparison/: detailed_metrics.csv  fpr_results.csv  power_results.csv  table1_summary_statistics.csv  table2_detailed_by_scenario.csv  table2_power_by_scenario.csv
results/mw_analysis/: comparison_mw_vs_dm.csv  heatmap_cliff_delta.csv  mw_all_results.csv  pooled_tsubset_results.csv
results/non_gpcr/: summary_of_methods.xlsx
results/non_gpcr_1/: summary_of_methods.xlsx
results/non_gpcr_2/: summary_of_methods.xlsx
results/non_gpcr_3/: summary_of_methods.xlsx
results/non_gpcr_3_4/: summary_of_methods.xlsx
results/non_gpcr_4/: summary_of_methods.xlsx
scripts/: generate_simulation_figures.py  run_comprehensive_analysis.py
src/costim_screen/: __init__.py  contrasts.py  diagnostics.py  dirichlet_multinomial.py  features.py  io.py  metadata_setup.py  model.py  model_comparison.py  plots.py  pooled.py  preprocess.py  stats.py  utils.py
src/primary_analysis/: __init__.py  base.py  constants.py  costim.py  read_db.py  sequencing_read.py
tests/: README.md  apply_dm_to_real_data.py  comprehensive_simulation_study.py  plot_simulation_results.py  test_all_methods.py  test_dm_calling_modes.py  test_dm_power.py  test_dm_smoke.py  test_hessian_comparison.py
(+177 files in other folders)
