[project]
name = "costim-screen"
version = "0.1.0"
description = "Re-analysis toolkit for pooled CAR costim screens"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "pandas>=2.0",
    "patsy>=0.5",
    "scipy>=1.10",
    "statsmodels>=0.14"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
